# tetris

./: .gitignore  CMakeLists.txt  TODO  check_cs.sh  runCMake.sh
include/: bloc.h  game.h  input.h  map.h  tetris.h
src/: .#main.c  bloc.c  game.c  input.c  main.c  map.c
